Fixed some broken links

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -426,7 +426,7 @@ was a simple tag game where a player can take advantage of GPS shadows to hide f
 a "chaser" player. The chaser will be able to see the other users' locations in real time if the runner is in an area with
 high GPS accuracy. Once a chaser tags a runner, the caught runner becomes the chaser and a 30-second Jail Time is
 triggered. During this time the catcher cannot see the runner's latest location or can catch a runner. I used
-the game portrayed in \emph{Jet Lag: The Game} and the other games described in section \ref{relatedgames} as inspiration \citep{Chase2022}.
+the game portrayed in \emph{Jet Lag: The Game} and the other games described in section \ref{relatedproducts} as inspiration \citep{Chase2022}.
 
 The game will have a time limit with the first iteration being 15 minutes. This is so that the game can be quick and
 easy to play during a study break. I also considered the fact that the game would work well in dense urban environments
@@ -1268,7 +1268,7 @@ section \ref{phase2generalfeedback}) were that the users wanted to see their cat
 Other comments stated that the powerup feature was really useful with one participant saying that
 they "found the powerup useful as a runner". Other participants told me that the powerup feature
 was really useful in informing their decisions. Throughout each of the games, I observed that people
-had altered their strategy because of this feature. Chapter 
+had altered their strategy because of this feature. 
 
 
 
