Did some more grammar fixes

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1004,8 +1004,8 @@ come about.
     \label{tab:agree}
 \end{table}
 
-\section{Conclusion and Lessons learnt}
-In conclusion, the main lesson learnt from Phase 1 was that my assumption that I could have the same
+\section{Conclusion and Lessons learned}
+In conclusion, the main lesson learned from Phase 1 was that my assumption that I could have the same
 shadow threshold was wrong. I also found that my assumption that 5 metres for a catch radius was 
 also wrong. These assumptions were a result of only using one phone when developing and designing
 the game. Unlike \emph{Can you see me now?} which gave every GPS player the same device \citep{canyouseeme},
