Added some more edits to the design section

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -457,7 +457,7 @@ be calculated as the person who was the runner for the most amount of time in to
 
 \section{Architecture}
 \label{phase1architecture}
-The game that I will create will utilise a Client-Server Architecture. The client will be a smartphone with a GPS or
+The game utilised a Client-Server Architecture with the client being a smartphone with a GPS or
 GNSS sensor. Several clients will be connected using a WebSocket. The smartphone will get the GPS data including the
 latitude, longitude and accuracy and then will process it and send it to the server. The location data will also be sent 
 to the UI where the user's overall position will be updated. Through the WebSocket, the phone will send the GPS data
@@ -1079,7 +1079,7 @@ range of quality in sensors and antennas within the phone.
 \end{figure}
 
 \section{Introduction}
-In response to the evaluations discussed in section \ref{phase1}, I knew that I needed to make some changes to my app
+In response to the evaluations discussed in chapter \ref{Evaluation}, I knew that I needed to make some changes to my app
 to improve the game based on the user's feedback. As a lot of the issues raised in the phase 1 evaluation showed that
 there were problems that affected the player's enjoyment of the game, I felt that it was important to take a seamless
 approach. Some of the seams that I found in phase 1 caused more frustration in my players and they didn't lead to more
