Turned the dissertation outline chapter into outline

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -126,8 +126,8 @@ my newly acquired knowledge of how GPS worked to understand what real-life locat
 to make a game that people would want to play. I wanted to ensure that there were enough features
 to make the game simple to play but hard to master.
 
-\section{Dissertation Outline}
-Through the course of this paper, I explore the ideas of seamful design,
+\section{Outline}
+Throughout this paper, I explore the ideas of seamful design,
 game design and GPS accuracy to create a game. This dissertation details the 
 main process, implementation and evaluation of a tag game with GPS shadows as the
 main idea behind the game.
