Made some edits to the other GNSS section

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -370,3 +370,20 @@ series = {UIST '94}
   volume={8},
   year={2003}
 }
+
+@book{gnss,
+   title={{GNSS - Global Navigation Satellite Systems: GPS, GLONASS, Galileo, and more}},
+   author={Bernhard Hofmann-Wellenhof and Herbert Lichtenegger and Elmar Wasle},
+   isbn={978-3-211-73012-6},
+   publisher={SpringerWienNewYork},
+   year={2008}
+}
+
+@book{Leick2015,
+   title={{GPS Satellite Surveying}},
+   author={Alfred Leick and Lev Rapoport and Dmitry Tatarnikov},
+   year={2015},
+   publisher={John Wiley and Sons, Inc.},
+   isbn={978-1-118-67557-1},
+   edition={4th}
+}
