--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -21,7 +21,7 @@
 %==============================================================================
 %% ABSTRACT
 \begin{abstract}
-    The Global Positioning System, also known as GPS has revolutionised the way
+    GPS has revolutionised the way
     that we travel and position ourselves. While ideally, we would want our GPS
     coordinates to be accurate, being around urban areas can obstruct the signals
     that allow for precise positioning. This project utilised the ideas of Seamful
@@ -166,11 +166,11 @@ satellites to find the intersection points. We usually need 3 to 4 satellites to
 
 \subsection{GPS in smartphones}
 These days most smartphones are fitted with a GPS sensor to allow for precise navigation. However, GPS is not the only GNSS
-system that smartphones use. Multiple countries have launched their own satellite systems. For example, Russia has the GLONASS
-system, the European Union has the GALILEO system and China has the Beidou system. Most modern smartphones make use
+system that smartphones use. Multiple countries have launched their own satellite positioning systems. For example, Russia has the GLONASS
+system, the European Space Agency has the GALILEO system and China has the Beidou system. Most modern smartphones make use
 of some or all of these systems. For example my phone and the phone that I am testing this project on, the Samsung 
-Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. This means that in reality
-a phone will be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
+Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. Since all three of these
+positioning systems have between 24 and 30 satellites much like GPS \citep{Leick2015}, a phone will actually be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
 have a lot more accuracy than in the past as the increase in satellites means that there is less chance of there being big
 errors.
 
