Added a bit more to the GPS in smartphones section

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -169,8 +169,8 @@ These days most smartphones are fitted with a GPS sensor to allow for precise na
 system that smartphones use. Multiple countries have launched their own satellite positioning systems. For example, Russia has the GLONASS
 system, the European Space Agency has the GALILEO system and China has the Beidou system. Most modern smartphones make use
 of some or all of these systems. For example my phone and the phone that I am testing this project on, the Samsung 
-Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. Since all three of these
-positioning systems have between 24 and 30 satellites much like GPS \citep{Leick2015}, a phone will actually be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
+Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. Much like GPS, each one of these GNSS satellites
+have between 24 and 30 satellites much like GPS \citep{Leick2015}. Therefore, a phone will actually be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
 have a lot more accuracy than in the past as the increase in satellites means that there is less chance of there being big
 errors.
 
