Shortened an overly worded phrase

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -243,7 +243,7 @@ glitches to prevent cheating.
 
 While trying to close every seam may be appropriate in some areas, it can sometimes be futile to try and close every seam. The idea of
 seamful design was coined by Mark Weiser in his talk \emph{Creating the invisible interface}. \citep{weiser1994} argued
-that we should find "Beautiful seams" which will let every system be "itself". Sometimes it is important for a user
+that we should find "Beautiful seams" which will let every system be "itself". Sometimes a user needs
 to be aware of the limitations of their device, for example, the estimated battery life on a phone or laptop screen. If we were
 to take a seamless approach by deciding not to show the battery life, we wouldn't know when to charge our phone. In the context of GPS, this usually means 
 to try and embrace the idea that GPS accuracy can vary based on the type of phone, the area you are in or the GPS clock error. For example 
